tests/lang/errors/catch_internal_match.neon
// There is exactly one `catch` clause — no multi-catch. Discriminating between
// error kinds is done with an ordinary `match` inside the catch body, over `e`,
// which the checker types as the callee's error union (`IoError | ParseError`
// here). No new syntax is involved: the catch body is just an expression.
//
// Because `e` is the declared union and nothing wider, the internal match is
// exhaustive over both arms without a `_`.

use std::io;
use std::string;

record IoError { msg: str }
record ParseError { msg: str }

impl Display for IoError {
    fn to_string(error: IoError) -> str { error.msg }
}
impl Error for IoError {}

impl Display for ParseError {
    fn to_string(error: ParseError) -> str { error.msg }
}
impl Error for ParseError {}

fn load(which: i64) throws IoError | ParseError -> str {
    if which == 0 { throw IoError { msg: "disk gone" } }
    else if which == 1 { throw ParseError { msg: "bad byte" } }
    else { "loaded" }
}

fn attempt(which: i64) -> str {
    try load(which) catch (e) {
        match e {
            is IoError => string::concat("io: ", e.msg),
            is ParseError => string::concat("parse: ", e.msg),
        }
    }
}

fn main() {
    io::println(attempt(0));
    io::println(attempt(1));
    io::println(attempt(2));
}
